--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
         <meta name="description" content="project">
         <meta name="author" content="project">
         <title> Portfolio Website </title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
-  
-  
+     
+  <style> 
+    body {
+ background-image: url("colorlogo.png");
+ background-color:#3DCDFF;
+}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
 </head>
