--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <style> 
     body {
  background-image: url("colorlogo.png");
- background-color:#3DCDFF;
+
 }
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </style>
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Portfolio</h1>
+<p> I am a Media Arts & Design major with a concentration in Interactive Design as well as a WRTC minor. I’m a creative designer with experience in Adobe Creative Cloud, Microsoft Office, HTML and CSS, and hoping to find a career in product design or social media advertising.</p>
 
 </body>
 </html>
