--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <h1>Portfolio</h1>
 <p> I am a Media Arts & Design major with a concentration in Interactive Design as well as a WRTC minor. I’m a creative designer with experience in Adobe Creative Cloud, Microsoft Office, HTML and CSS, and hoping to find a career in product design or social media advertising.</p>
 
+  <h1> Social Media Management </h1>
 </body>
 </html>
 
