--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
         <meta name="author" content="" />
         <title>Scrolling Nav - Start Bootstrap Template</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-  <!-- LOAD BOOTSTRAP CSS - DO NOT DELETE -->
+ 
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
      <link href="styles.css" rel="stylesheet">
-  <!-- END LOADING BOOTSTRAP CSS -->
 
-      
-    <!-- Custom styles -->
+
+      <img src="colorlogo.png" alt="logo" width="100" height="100">
+
     <link href="custom.css" rel="stylesheet">
 
 
     </head>
     <body id="page-top">
-        <!-- Navigation-->
+ 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
             <div class="container px-4">
                 <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
