--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <!-- The hrefs here must match the ID attribute of the corresponding divs/containers -->
                         <li class="nav-item"><a class="nav-link" href="#about">Social Media Marketing</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Ole School Ad Campaign</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Other Project</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Movie Posters</a></li>
                     </ul>
                 </div>
             </div>
