--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <!-- The hrefs here must match the ID attribute of the corresponding divs/containers -->
+
                         <li class="nav-item"><a class="nav-link" href="#about">Social Media Marketing</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Ole School Ad Campaign</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Movie Posters</a></li>
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </nav>
-        <!-- Header-->
+   
         
        
               <img src="colorlogo.png" alt="logo" width="100" height="100">
@@ -65,8 +65,8 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Contact us</h2>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                        <h2>Ole School Alumni Ad Campaign</h2>
+                        <p class="lead">I created a multimedia ad campaign for a scholarship group here at JMU. The Ole School Alumni Group is a scholarship organization that gives scholarships to minority students to increase the minority enrollment to JMU.</p>
                     </div>
                 </div>
             </div>
