--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Josh Haug</h2>
-                        <p class="lead">For this website, I wanted to showcase soe of the work I've created over the past few years in the SMAD department here at JMU.</p>
+                        <h2>Social Media Marketing</h2>
+                        <p class="lead"></p>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Social Media Marketing</h2>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+                        <p class="lead">I created a multimedia ad campaign for a scholarship group here at JMU. The Ole School Alumni Group is a scholarship organization that gives scholarships to minority students to increase the minority enrollment to JMU.</p>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Ole School Alumni Ad Campaign</h2>
-                        <p class="lead">I created a multimedia ad campaign for a scholarship group here at JMU. The Ole School Alumni Group is a scholarship organization that gives scholarships to minority students to increase the minority enrollment to JMU.</p>
+                        <p class="lead"></p>
                     </div>
                 </div>
             </div>
