--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Social Media Marketing</h2>
+                        <h2>Ole School Alumni Ad Campaign</h2>
                         <p class="lead">I created a multimedia ad campaign for a scholarship group here at JMU. The Ole School Alumni Group is a scholarship organization that gives scholarships to minority students to increase the minority enrollment to JMU.</p>
                     </div>
                 </div>
