--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
        <header>
            <h1>Josh Haug</h1>
-          <p> My name is Josh Haug and I am a junior Media Arts & Design Major with an Interactive Design Concentration and a minor in Writing, Rhetoric, and Technical Communication. </p>
+          <h1> My name is Josh Haug and I am a junior Media Arts & Design Major with an Interactive Design Concentration and a minor in Writing, Rhetoric, and Technical Communication. </h1>
         </header>
               <img src="colorlogo.png" alt="logo" width="100" height="100">
         
