--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Ole School Alumni Ad Campaign</h2>
-                        <p class="lead"></p>
+                        <h2>Movie Posters</h2>
+                        <p class="lead">I created posters and fliers for Reel Change Film Festival, an annual event held here on campus. This festival showcases short films and other projects created by JMU students.</p>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Footer-->
+        
         <footer class="py-5 bg-dark">
             <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
         </footer>
@@ -85,7 +85,7 @@
 
 
 
-        <!-- LOAD BOOTSTRAP JAVASCRIPT - DO NOT DELETE -->
+
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 
