--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        <header>
           <h2> My name is Josh Haug and I am a junior Media Arts & Design Major with an Interactive Design Concentration and a minor in Writing, Rhetoric, and Technical Communication. </h2>
         </header>
-              <img src="colorlogo.png" alt="logo" width="100" height="100">
+              <img src="colorlogo.png" alt="logo" width="150" height="150" style="vertical-align:middle">
         
         <section id="about">
             <div class="container px-4">
