--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Social Media Marketing</h2>
-                        <p class="lead"></p>
+                        <p class="lead">Throughout my time at JMU, I've created several mockups and designs for social media ad campaigns.</p>
                     </div>
                 </div>
             </div>
+            
+            <h2>Adagio House</h2>
+            <p> ALong with the help of some fellow smad students, I created several posts for Adagio House, a nonprofit counseling agency based in downtown Harrisonburg. They offer caregiving services to people with physical and mental illnesses, and host various events to raise awareness and increase donations. </p>
         </section>
         
         <section class="bg-light" id="services">
