--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             
             <h2>Adagio House</h2>
-            <p> ALong with the help of some fellow smad students, I created several posts for Adagio House, a nonprofit counseling agency based in downtown Harrisonburg. They offer caregiving services to people with physical and mental illnesses, and host various events to raise awareness and increase donations. </p>
+            <p class="lead">Along with the help of some fellow smad students, I created several posts for Adagio House, a nonprofit counseling agency based in downtown Harrisonburg. They offer caregiving services to people with physical and mental illnesses, and host various events to raise awareness and increase donations. </p>
         </section>
         
         <section class="bg-light" id="services">
