--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <div class="row gx-4 justify-content-center"> 
             <h2>Adagio House</h2>
             <p class="lead">Along with the help of some fellow smad students, I created several posts for Adagio House, a nonprofit counseling agency based in downtown Harrisonburg. They offer caregiving services to people with physical and mental illnesses, and host various events to raise awareness and increase donations. </p>
-        </section>
+            </div>
+                </section>
         
         <section class="bg-light" id="services">
             <div class="container px-4">
