--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Social Media Marketing</h2>
+                        <h2 style="color:darkblue;">Social Media Marketing</h2>
                         <p class="lead">Throughout my time at JMU, I've created several mockups and designs for social media ad campaigns.</p>
                     </div>
                 </div>
