--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Ole School Alumni Ad Campaign</h2>
+                        <h2 style="color:#0063a2;">Ole School Alumni Ad Campaign</h2>
                         <p class="lead">I created a multimedia ad campaign for a scholarship group here at JMU. The Ole School Alumni Group is a scholarship organization that gives scholarships to minority students to increase the minority enrollment to JMU. I utilzied print, social, and digital media to complete this ad campaign.</p>
                     </div>
                 </div>
