--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         
             
-            <section class="bg-light" id="services">
+            <section id="services">
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
