--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     </head>
-    <body style="background-color:red;"id="page-top">
+    <body style="background-color:#90B1C6;"id="page-top">
  
   
         
