--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Final Project"/>
         <meta name="author" content="Josh Haug"/>
         <title>Portfolio Website</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
  
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
      <link href="styles.css" rel="stylesheet">
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
 
-                        <li class="nav-item"><a class="nav-link" href="#about">Social Media Marketing</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Ad Campaigns</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Ole School Ad Campaign</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Movie Posters</a></li>
                         <br>
@@ -61,8 +61,8 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 style="color:#0063a2;">Social Media Marketing</h2>
-                        <p class="lead">Throughout my time at JMU, I've created several mockups and designs for social media ad campaigns.</p>
+                        <h2 style="color:#0063a2;">Ad Campaigns</h2>
+                        <p class="lead">Throughout my time at JMU, I've created several mockups and designs for ad campaigns across several mediums of media.</p>
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
            <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-            <h2>Adagio House</h2>
+            <h2 style="color:#E6CB33;">Adagio House</h2>
             <p class="lead">Along with the help of some fellow SMAD students, I created several posts for Adagio House, a nonprofit counseling agency based in downtown Harrisonburg. They offer caregiving services to people with physical and mental illnesses, and host various events to raise awareness and increase donations. </p>
             </div>
                </div>
