--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ms-auto">
 
                         <li class="nav-item"><a class="nav-link" href="#about">Ad Campaigns</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Ole School Ad Campaign</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Ole School Alumni Group</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Movie Posters</a></li>
                         <br>
                     </ul>
@@ -104,14 +104,14 @@
             </div>
             
             <div style="text-align: center;">
-            <img src="menu.pdf" alt="menu" width="100" height="100">
+            <img src="menu.pdf" alt="menu" width="200" height="200">
            </div>
            
                 <section id="services">
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 style="color:#0063a2;">Ole School Alumni Ad Campaign</h2>
+                        <h2 style="color:#0063a2;">Ole School Alumni Group</h2>
                         <p class="lead">I created a multimedia ad campaign for a scholarship group here at JMU. The Ole School Alumni Group is a scholarship organization that gives scholarships to minority students to increase the minority enrollment to JMU. I utilzied print, social, and digital media to complete this ad campaign.</p>
                     </div>
                 </div>
