--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             
             <div style="text-align: center;">
-            <img src="menu.pdf" alt="menu" width="200" height="200">
+            <img src="pieroscard.pdf" alt="menu" width="200" height="200">
            </div>
            
                 <section id="services">
