--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             
             <div style="text-align: center;">
-            <img src="pieroscard.pdf" alt="menu" width="250" height="250">
+            <img src="pieroscard.pdf" alt="menu" width="300" height="300">
            </div>
            
                 <section id="services">
@@ -126,7 +126,7 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 style="color:#E6CB33;"Movie Posters</h2>
+                        <h2 style="color:#E6CB33;">Movie Posters</h2>
                         <p class="lead">I created posters and fliers for Reel Change Film Festival, an annual event held here on campus. This festival showcases short films and other projects created by JMU students.</p>
                     </div>
                 </div>
