--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-        <meta name="description" content="Final Project"/>
-        <meta name="author" content="Josh Haug"/>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Final Project">
+        <meta name="author" content="Josh Haug">
         <title>Portfolio Website</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
  
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
      <link href="styles.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 
 
     </head>
-    <body style="background-color:#929EA5";id="page-top">
+    <body style="background-color:#929EA5;"id="page-top">
  
   
         
