--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <img src="pieroscard.pdf" alt="menu" width="300" height="300">
            </div>
            
-              <button class="button">Fun Fact: the wine bottle logo I designed for them is hanging up in their restaurant!</button> 
+              <button class="button">Fun Fact: the wine bottle logo I designed for Piero's is hanging up in their restaurant!</button> 
             
              <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
